# better-bending

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: Libshell.cmake
energy-benchmark/: CMakeLists.txt  README.md
energy-benchmark/cmake/: FindPolyscope.cmake
energy-benchmark/src/: Derivatives.h  Visualization.cpp  Visualization.h  main.cpp
energy-benchmark/src/models/: CorotationalHingeES.h  CorotationalHingeFS.h  CrouzeixRaviartQuadraticBending.h  DKTBending.h  DiscreteShells.h  DiscreteShellsTan.h  ExactKichhoffLove.h  ExactMeanCurvatureSquared.h  IntrinsicVertexBasedQuadraticBending.h  Model.h  S1Sin.h  S1Tan.h  S1Theta.h  SecondOrderFEM.h  SixVertexMidedgeAverage.h  VertexBasedQuadraticBending.h
energy-benchmark/src/testcases/: HalfCylinder.cpp  HalfCylinder.h  HalfTorus.cpp  HalfTorus.h  Helix.cpp  Helix.h  Sphere.cpp  Sphere.h  Vee.cpp  Vee.h
lateral-buckling/: CMakeLists.txt  README.md
